--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Anvil"]
 	path = Anvil
 	url = https://github.com/thesmallcreeper/Anvil
+[submodule "glm"]
+	path = glm
+	url = https://github.com/thesmallcreeper/glm
