--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/thesmallcreeper/glm
+[submodule "Configuru"]
+	path = Configuru
+	url = https://github.com/thesmallcreeper/Configuru
