Simple teapot rendering

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,8 +1,9 @@
 // Config file using emilk/configuru CFG
 
 graphicsSettings: {
-	xRes:				1280
-	yRes:				720
+	xRes:				1600
+	yRes:				900
+	FOV:				75.0
 	swapchain_images:	2
 }
 
