Fix input bugs on Linux

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -10,8 +10,8 @@ graphicsSettings: {
 inputSettings: {
 	mouseSensitivity:	0.001
 	keybinds: {
-		MoveForward:		["W","UP"]
-		MoveBackward:		["S","DOWN"]
+		MoveForward:		["W","UP","LEFT_MOUSE"]
+		MoveBackward:		["S","DOWN","RIGHT_MOUSE"]
 		MoveLeft:			["A","LEFT"]
 		MoveRight:			["D","RIGHT"]
 		Exit:				["ESCAPE"]	
