--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,9 +1,14 @@
 // Config file using emilk/configuru CFG
 
+sceneInput: {
+	path:				"testModel/someStuffs.gltf"
+	scale:				1.0
+}
+
 graphicsSettings: {
 	xRes:				1600
 	yRes:				900
-	FOV:				75.0
+	FOV:				107.0
 	swapchain_images:	2
 }
 
