Adding glTF nodes support, various bugfixing

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -27,6 +27,7 @@ SET (SRC      "${inMyRoom_vulkan_SOURCE_DIR}/include/glTFenum.h"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/include/WindowWithAsyncInput.h"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesPipelines.h"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/include/SceneMeshes.h"
+			  "${inMyRoom_vulkan_SOURCE_DIR}/include/NodesTree.h"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/Engine.cpp"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics.cpp"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/InputManager.cpp"
@@ -35,6 +36,7 @@ SET (SRC      "${inMyRoom_vulkan_SOURCE_DIR}/include/glTFenum.h"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/WindowWithAsyncInput.cpp"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesPipelines.cpp"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/SceneMeshes.cpp"
+			  "${inMyRoom_vulkan_SOURCE_DIR}/src/NodesTree.cpp"
 			  "${inMyRoom_vulkan_SOURCE_DIR}/src/main.cpp")
 			  
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${inMyRoom_vulkan_SOURCE_DIR})
