--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,8 +1,7 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/someStuffs.gltf"
-	scale:				1.0
+	path:				"testModel/3dsmaxTesting.gltf"
 }
 
 graphicsSettings: {
