--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -21,29 +21,29 @@ include_directories(../Anvil/include                                            
 SET (SRC      "${inMyRoom_vulkan_SOURCE_DIR}/include/Engine.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/glTFenum.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/include/hash_combine.h"
+              "${inMyRoom_vulkan_SOURCE_DIR}/include/hash_combine.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/InputManager.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/include/MaterialsTextures.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/include/MeshesPrimitives.h"
+              "${inMyRoom_vulkan_SOURCE_DIR}/include/MaterialsTextures.h"
+              "${inMyRoom_vulkan_SOURCE_DIR}/include/MeshesPrimitives.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/MovementBaseClass.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/NaiveCamera.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/NodesMeshes.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesMaterials.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesPipelines.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesShaders.h"
+              "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesPipelines.h"
+              "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesShaders.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/SceneNodes.h"
               "${inMyRoom_vulkan_SOURCE_DIR}/include/WindowWithAsyncInput.h"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/src/Engine.cpp"
+              "${inMyRoom_vulkan_SOURCE_DIR}/src/Engine.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/InputManager.cpp"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/src/MaterialsTextures.cpp"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/src/MeshesPrimitives.cpp"
+              "${inMyRoom_vulkan_SOURCE_DIR}/src/MaterialsTextures.cpp"
+              "${inMyRoom_vulkan_SOURCE_DIR}/src/MeshesPrimitives.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/MovementBaseClass.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/NaiveCamera.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/NodesMeshes.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesMaterials.cpp"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesPipelines.cpp"
-			  "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesShaders.cpp"
+              "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesPipelines.cpp"
+              "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesShaders.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/SceneNodes.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/WindowWithAsyncInput.cpp"
               "${inMyRoom_vulkan_SOURCE_DIR}/src/main.cpp")
@@ -58,6 +58,10 @@ if (WIN32)
     target_link_libraries(inMyRoom_vulkan Anvil)
 else()
     target_link_libraries(inMyRoom_vulkan Anvil dl)
+endif()
+
+if (UNIX)
+    target_link_libraries(inMyRoom_vulkan stdc++fs)
 endif()
 
 target_link_libraries (inMyRoom_vulkan Threads::Threads)
