--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "MathGeoLib"]
 	path = MathGeoLib
 	url = https://github.com/thesmallcreeper/MathGeoLib
+[submodule "Compressonator"]
+	path = Compressonator
+	url = https://github.com/thesmallcreeper/Compressonator
