--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,8 +1,8 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/Sponza.gltf"
-	imagesFolder:		"testModel"
+	path:				"testModel/etc/BoomBox/BoomBox.gltf"
+	imagesFolder:		"testModel/etc/BoomBox"
 }
 
 graphicsSettings: {
