WIP stable version with disable mipmaps until new compressonator sdk roll out

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,15 +1,17 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/BoomBox/BoomBox.gltf"
-	imagesFolder:		"testModel/BoomBox"
+	path:				"testModel/Sponza/Sponza.gltf"
+	imagesFolder:		"testModel/Sponza"
 }
 
 graphicsSettings: {
 	xRes:				1600
 	yRes:				900
 	FOV:				107.0
-	swapchain_images:	2
+	nearPlaneDistance:	1.0
+	farPlaneDistance:	100.0
+	useMipmaps:			false			// Waiting Compressonator SDK to support mipmapping
 }
 
 inputSettings: {
@@ -19,7 +21,7 @@ inputSettings: {
 		MoveBackward:		["S","DOWN","RIGHT_MOUSE"]
 		MoveLeft:			["A","LEFT"]
 		MoveRight:			["D","RIGHT"]
-		Exit:				["ESCAPE"]	
+		Exit:				["ESCAPE"]
 	}
 }
 
