--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\NodesMeshes.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="src\TexturesImagesUsage.cpp">
+      <Filter>Source Files\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Engine.h">
@@ -121,6 +124,9 @@
     </ClInclude>
     <ClInclude Include="include\hash_combine.h">
       <Filter>Header Files\Header-only</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TexturesImagesUsage.h">
+      <Filter>Header Files\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
