QoL, name changes, add MathGeoLib to Cmake

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -3,12 +3,21 @@ project(inMyRoom_vulkan)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${inMyRoom_vulkan_SOURCE_DIR})
 
+set(MATH_AVX ON)                                                           #Enable AVX at MathGeoLib. FM3 and FM4 can be also enabled
+
 add_subdirectory(../Anvil "${CMAKE_CURRENT_BINARY_DIR}/anvil")
 add_subdirectory(../Compressonator/Compressonator/Make "${CMAKE_CURRENT_BINARY_DIR}/compressonator")
+add_subdirectory(../MathGeoLib "${CMAKE_CURRENT_BINARY_DIR}/mathgeolib")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 add_compile_options(-m64)
+if (MSVC)
+    add_definitions(/arch:AVX)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+else ()
+    add_definitions(-mavx -march=corei7-avx -mtune=corei7-avx)
+endif()
 
 find_package(Threads REQUIRED)
 
@@ -31,7 +40,7 @@ SET(SRC "${inMyRoom_vulkan_SOURCE_DIR}/include/Engine.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/TexturesImagesUsage.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/MaterialsTextures.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/MeshesPrimitives.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/MovementBaseClass.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/CameraBaseClass.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/NaiveCamera.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/NodesMeshes.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesMaterials.h"
@@ -39,13 +48,14 @@ SET(SRC "${inMyRoom_vulkan_SOURCE_DIR}/include/Engine.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/PrimitivesShaders.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/SceneNodes.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/WindowWithAsyncInput.h"
+ 
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Engine.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/InputManager.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/TexturesImagesUsage.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/MaterialsTextures.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/MeshesPrimitives.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/MovementBaseClass.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/CameraBaseClass.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/NaiveCamera.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/NodesMeshes.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesMaterials.cpp"
@@ -53,23 +63,25 @@ SET(SRC "${inMyRoom_vulkan_SOURCE_DIR}/include/Engine.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/PrimitivesShaders.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/SceneNodes.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/WindowWithAsyncInput.cpp"
+ 
         "${inMyRoom_vulkan_SOURCE_DIR}/src/main.cpp")
 
 add_executable(inMyRoom_vulkan ${SRC})
 
 add_dependencies(inMyRoom_vulkan Anvil)
 add_dependencies(inMyRoom_vulkan Compressonator)
+add_dependencies(inMyRoom_vulkan MathGeoLib)
 
 if (WIN32)
     target_link_libraries(inMyRoom_vulkan Anvil)
     target_link_libraries(inMyRoom_vulkan Compressonator)
+    target_link_libraries(inMyRoom_vulkan MathGeoLib)
 else ()
     target_link_libraries(inMyRoom_vulkan Anvil dl)
     target_link_libraries(inMyRoom_vulkan Compressonator dl)
+    target_link_libraries(inMyRoom_vulkan MathGeoLib dl)
 endif ()
 
 if (UNIX)
     target_link_libraries(inMyRoom_vulkan stdc++fs)
 endif ()
-
-target_link_libraries(inMyRoom_vulkan Threads::Threads)
