CMake-Solution changes

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -15,8 +15,13 @@ add_compile_options(-m64)
 if (MSVC)
     add_definitions(/arch:AVX)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    set(relFlags "/Ox /Ob2 /Oi /Ot /GT /GF /GS- /fp:fast /fp:except- /MP")
+    set(relLinkFlags "/OPT:ICF /INCREMENTAL:NO")
 else ()
     add_definitions(-mavx -march=corei7-avx -mtune=corei7-avx)
+    set(OPT_FLAGS "-O3 -ffast-math")
+    set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} ${OPT_FLAGS}")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OPT_FLAGS}")
 endif()
 
 find_package(Threads REQUIRED)
